--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@babel/core": "^7.15.5",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.0.1",
     "axios": "^0.24.0",
     "babel-eslint": "^10.1.0",
